force-app/main/default/objects/LLC_BI__LoanTeam__c/LLC_BI__LoanTeam__c.object-meta.xml
<CustomObject>
    <description>The Loan Team Member object captures information about the loan teams assigned to loans in nCino.</description>
    <label>Loan Team Member</label>
    <nameField>
        <displayFormat>LT-{00000000}</displayFormat>
        <label>Loan Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>