force-app/main/default/objects/LLC_BI__LoanTeam__c/fields/LLC_BI__Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Assigned_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required. It is manually populated. It identifies the role that has been assigned to a user when adding them to the loan team.</description>
    <inlineHelpText>Available Roles: Loan Officer; Lending Assistant; Credit Analyst / Underwriter; Doc Prep Processor; Loan Ops.</inlineHelpText>
    <label>Role</label>
    <referenceTo>LLC_BI__Role__c</referenceTo>
    <relationshipLabel>Loan Team Members</relationshipLabel>
    <relationshipName>Loan_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>