force-app/main/default/objects/LLC_BI__LoanTeam__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <description>This field is a master detail field, used to specify the loan that the loan team is associated to.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Loan Team Members</relationshipLabel>
    <relationshipName>Loan_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>