force-app/main/default/objects/LLC_BI__LoanTeam__c/fields/LLC_BI__Team_Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Team_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the role of a user on the loan team (Closer, compliance, underwriter, etc)</description>
    <inlineHelpText>This field is deprecated.  It has been replaced by Assigned_Role.</inlineHelpText>
    <label>-D Role</label>
    <referenceTo>LLC_BI__Team_Role__c</referenceTo>
    <relationshipLabel>Loan Team Members</relationshipLabel>
    <relationshipName>Loan_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>