force-app/main/default/objects/LLC_BI__LoanTeam__c/fields/LLC_BI__User__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a look up to an nCino user that will be assigned a role, and associated to the loan team.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>