force-app/main/default/objects/LLC_BI__LoanTeam__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>LLC_BI__Loan__c</columns>
    <columns>LLC_BI__Assigned_Role__c</columns>
    <columns>LLC_BI__User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LLC_BI__Description__c</columns>
    <columns>LLC_BI__Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>